kubernetes/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: shorty
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
