kubernetes/qr-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qr-service
  namespace: shorty
spec:
  selector:
    app: qr-service
  ports:
  - port: 8080
    targetPort: 8080
