kubernetes/url-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-service
  namespace: shorty
spec:
  type: ClusterIP
  selector:
    app: url-service
  ports:
  - port: 8080
    targetPort: 8080
